WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239608
Service Worker loads should not expose some ResourceTiming information
https://bugs.webkit.org/show_bug.cgi?id=239608
Summary
Service Worker loads should not expose some ResourceTiming information
youenn fablet
Reported
2022-04-21 08:50:26 PDT
Service Worker loads should not expose some ResourceTiming information
Attachments
Patch
(10.28 KB, patch)
2022-04-21 08:52 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(10.15 KB, patch)
2022-04-22 00:04 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2022-04-21 08:52:41 PDT
Created
attachment 458068
[details]
Patch
youenn fablet
Comment 2
2022-04-22 00:04:59 PDT
Created
attachment 458118
[details]
Patch
Alex Christensen
Comment 3
2022-04-25 11:44:55 PDT
Comment on
attachment 458118
[details]
Patch Should we change PerformanceTiming too?
youenn fablet
Comment 4
2022-04-25 11:49:45 PDT
I am not sure, domainLookupStart, domainLookupEnd, connectStart and connectEnd would make sense, but doing so fails WPT tests.
EWS
Comment 5
2022-04-26 00:35:51 PDT
Committed
r293418
(
249978@main
): <
https://commits.webkit.org/249978@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458118
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-04-26 00:36:15 PDT
<
rdar://problem/92319061
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug