Source/WebCore/page/PerformanceResourceTiming.cpp
@@ -116,6 +116,9 @@ double PerformanceResourceTiming::redirectStart() const
     if (m_resourceTiming.networkLoadMetrics().failsTAOCheck)
         return 0.0;
 
+    if (m_resourceTiming.isLoadedFromServiceWorker())
+        return 0.0;
+
     if (!m_resourceTiming.networkLoadMetrics().redirectCount)
         return 0.0;
 
@@ -125,6 +128,9 @@ double PerformanceResourceTiming::redirectStart() const
 double PerformanceResourceTiming::redirectEnd() const
 {
     if (m_resourceTiming.networkLoadMetrics().failsTAOCheck)
+        return 0.0;
+
+    if (m_resourceTiming.isLoadedFromServiceWorker())
         return 0.0;
 
     if (!m_resourceTiming.networkLoadMetrics().redirectCount)
@@ -145,6 +151,9 @@ double PerformanceResourceTiming::domainLookupStart() const
     if (m_resourceTiming.networkLoadMetrics().failsTAOCheck)
         return 0.0;
 
+    if (m_resourceTiming.isLoadedFromServiceWorker())
+        return fetchStart();
+
     if (!m_resourceTiming.networkLoadMetrics().domainLookupStart)
         return fetchStart();
 
@@ -155,6 +164,9 @@ double PerformanceResourceTiming::domainLookupEnd() const
 {
     if (m_resourceTiming.networkLoadMetrics().failsTAOCheck)
         return 0.0;
+
+    if (m_resourceTiming.isLoadedFromServiceWorker())
+        return fetchStart();
 
     if (!m_resourceTiming.networkLoadMetrics().domainLookupEnd)
         return domainLookupStart();
@@ -167,6 +179,9 @@ double PerformanceResourceTiming::connectStart() const
     if (m_resourceTiming.networkLoadMetrics().failsTAOCheck)
         return 0.0;
 
+    if (m_resourceTiming.isLoadedFromServiceWorker())
+        return fetchStart();
+
     if (!m_resourceTiming.networkLoadMetrics().connectStart)
         return domainLookupEnd();
 
@@ -177,6 +192,9 @@ double PerformanceResourceTiming::connectEnd() const
 {
     if (m_resourceTiming.networkLoadMetrics().failsTAOCheck)
         return 0.0;
+
+    if (m_resourceTiming.isLoadedFromServiceWorker())
+        return fetchStart();
 
     if (!m_resourceTiming.networkLoadMetrics().connectEnd)
         return connectStart();
